<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OFC Mobile</string>
    <!-- about tab -->
    <string name="aboutTabTitle">About</string>
    <string name="lblApplicationName">Application name:\u0020</string>
    <string name="lblProgramVersionName">Application version:\u0020</string>
    <string name="lblFormVersionName">Form version:\u0020</string>
    <string name="lblLoadedDataFileName">Loaded data file:\u0020</string>
    <string name="lblGpsTimeout">GPS timeout:\u0020</string>
    <string name="txtGpsTimeout">set GPS timeout</string>
    <string name="lblLanguage">Language:\u0020</string>
    <string name="lblFormDefinitionFile">Path to form\r\ndefinition\r\nfile on sdcard:\u0020</string>
    <string name="lblUsername">Username:\u0020</string>
    <string name="lblSurveyId">Project ID:\u0020</string>
    <string name="lblRecordDownloadPath">Records download path:\u0020</string>
    <string name="lblRecordUploadPath">Records upload path:\u0020</string>
    
    <!-- dialogs -->
    <string name="exitAppTitle">Exiting&#8230;</string>    
    <string name="exitAppMessage">Do you want to exit?</string>
    <string name="selectFormDefinitionTitle">Back to form definition selection&#8230;</string> 
    <string name="selectFormDefinitionMessage">Do you want to go to form definition selection screen?</string>
    <string name="loadFormDefinitionTitle">Loading form definition&#8230;</string>
    <string name="loadFormDefinitionMessage">Form definition could not be loaded. Make sure that the file exists and contains correct form definition.</string>
    <string name="selectRootEntityTitle">Back to root entity selection&#8230;</string>    
    <string name="selectRootEntityMessage">Do you want to go to root entity selection screen?</string>
    <string name="selectRecordTitle">Back to record selection&#8230;</string>    
    <string name="selectRecordMessage">Do you want to go to record selection screen?</string>
    <string name="startGpsTitle">Starting GPS&#8230;</string>
    <string name="startGpsMessage">GPS on your device is disabled. Do you want to enable it in operating system Settings?</string>
    <string name="savingDataTitle">Saving&#8230;</string>    
    <string name="savingDataQuestionMessage">Do you want to save data from form?</string>
    <string name="savingDataSuccessMessage">Record successfully saved.</string>
    <string name="savingDataFailureMessage">Record could not be saved.</string>
    <string name="gettingCoordsFinishedTitle">Getting coordinates&#8230;</string>    
    <string name="gettingCoordsSuccessMessage">Coordinates retrieved from GPS.</string>
    <string name="gettingCoordsFailureMessage">Coordinates could not be retrieved from GPS, because of timeout.</string>    
    <string name="backingupDataSuccessMessage">Data successfully saved.</string>
    <string name="backingupDataFailureMessage">Data could not be saved.</string>    
    <string name="savingToDatabase">Save</string>
    <string name="savingToFile">XML</string>
    <string name="openingPlotListTitle">Back to list&#8230;</string>    
    <string name="openingPlotListMessage">Do you want to open list of forms?</string>
    <string name="editingMemoField">Editing</string>
    <string name="deleteRecordTitle">Deleting&#8230;</string>
    <string name="deleteRecord">Do you want to delete the record?</string>
    <string name="deleteEntityTitle">Deleting&#8230;</string>
    <string name="deleteEntity">Do you want to delete the entity?</string>  
    <string name="deleteAttributeTitle">Deleting&#8230;</string>
    <string name="deleteAttribute">Do you want to delete the attribute\'s value?</string>      
    <string name="noInternetTitle">No connection&#8230;</string>    
    <string name="noInternetMessage">There is no connection to Internet available. Make sure you are connected to network and then try to upload data again.</string>
    <string name="maxCountTitle">Too many&#8230;</string>
    <string name="maxCountMessage">Number of instances of this element has reached maximum.</string>
    <string name="addNewEntityTitle">Adding new instance of the entity&#8230;</string>
    <string name="addNewEntityMessage">Do you want to add a new instance of the entity?</string>
    <string name="addNewAttributeTitle">Adding new instance of the attribute&#8230;</string>
    <string name="addNewAttributeMessage">Do you want to add a new instance of the attribute?</string>
    <string name="uploadToServerSuccessfulTitle">Upload completed</string>
    <string name="uploadToServerSuccessfulMessage">Uploading data to server successfully finished.</string>
    <string name="downloadToDeviceSuccessfulTitle">Download completed</string>       
    <string name="downloadToDeviceSuccessfulMessage">Downloading data the device successfully finished.</string>
    <string name="copyingDatabaseTitle">Copying database&#8230;</string>    
    <string name="copyingDatabaseWrongFileExtensionMessage">Selected file does not seem to be database file (its extension is not .db)</string>
    <string name="backupingDatabaseTitle">Exporting database&#8230;</string>
    <string name="backupingDatabaseMessageSuccess">Database file exported.</string>
    <string name="backupingDatabaseMessageFileNotFound">Database file could not be exported, because no database was found.</string>
    <string name="backupingDatabaseMessageIOException">Database file could not be exported, because destination folder on sdcard was not found.</string>
    <string name="retrievingGpsTitle">Retrieving location from GPS&#8230;</string>    
    <string name="retrievingGpsMessage">Please wait until location is being retrieved from GPS.</string>
    
    <!-- toasts -->
    <string name="attributeDeletedToast">Attribute was deleted.</string>
    <string name="entityDeletedToast">Entity was deleted.</string>
    
    <!-- buttons -->
    <string name="footerSave">Save</string>
    <string name="footerClusterList">Back to list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="previousInstanceButton">PREVIOUS</string>
    <string name="nextInstanceButton">NEXT</string>
    <string name="addInstanceButton">ADD</string>
    <string name="deleteInstanceButton">DELETE</string>
    <string name="spatialReferenceSystemLabel">Spatial reference system</string>
    <string name="internalGpsButton">Get from GPS</string>
    <string name="uploadToServerButton">Upload</string>
    <string name="downloadFromServerButton">Download</string>
    <string name="importFromFileButton">Import</string>
    
    <!-- images -->
    <string name="arbonautlogo">Arbonaut logo</string>
    <string name="faologo">FAO logo</string>
    <string name="ofclogo">OpenForisCollect logo</string>
    
    <!-- menu -->
    <string name="open">Back to list</string>
    <string name="save">Save</string>
    <string name="export_to_xml">Export to XML</string>
    <string name="export_all_to_zip">Export all</string>
    <string name="import_from_xml_file">Import from XML</string>
    <string name="import_database_from_file">Import database from file</string>
    <string name="backup_database">Backup local database</string>
    <string name="import_codelist_from_csv_file">Import code list from CSV</string>
    <string name="import_species_from_csv_file">Import species from CSV</string>
    <string name="download_from_server">Download XML</string>    
    <string name="upload_to_server">Upload XML</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    
    <string name="addNewRecord">Add new</string>
    <string name="addNewSurvey">Add new survey from file /sdcard</string>
    
    
    <!-- settings screen -->
    <string name="settingsScreenTitle">SETTINGS</string>
    <string name="showSoftKeyboardOnNumeric">Show soft-keyboard on numeric fields</string>
    <string name="showSoftKeyboardOnText">Show soft-keyboard on text fields</string>
    <string name="whiteBackground">Use white background</string>
    
    <string name="plotListPrompt">Choose entity </string>
    <string name="plotListTitle">Insert name </string>
    
    
    <!-- progress -->
    <string name="workInProgress">Processing&#8230;</string>
    <string name="saving">Saving&#8230;</string>
    <string name="loading">Loading&#8230;</string>   
    <string name="launchAppMessage">Launching application&#8230;</string>
    <string name="loadingNewFormDefinitionMessage">Loading new form definition&#8230;</string>
    <string name="unmarshallingSurveyMessage">Unmarshalling form definition from file&#8230;</string>
    <string name="importingSurveyToDatabaseMessage">Saving form definition&#8230;</string>
    <string name="uploadingDataToServerMessage">Uploading data to server&#8230;</string>
    <string name="downloadingDataToServerMessage">Downloading data to device&#8230;</string>
    <string name="searchingForTaxon">Searching for species matching criteria&#8230;</string>
    <string name="backupingData">Preparing backup of data&#8230;</string>
    <string name="savingRecordToXml">Saving record to xml file&#8230;</string>
    <string name="refreshingScreen">Preparing requested screen&#8230;</string>
    
    <!-- lists -->
    <string name="clusterChoiceFailedBecauseNoDataSaved">No data saved in local database</string>
    <string name="clusterChoiceListLabel">Available records</string>
    <string name="rootEntityChoiceListLabel">Select root entity</string>
    <string name="formChoiceListLabel">Select form definition</string>
    <string name="dataToUpload">Select files to upload</string>
    <string name="noDataToUpload">No XML files exist in the application folder. </string>
    <string name="dataToDownloadNotExisting">There is no files on the server in the specified location.</string>
    <string name="dataToDownload">Select files to download</string>
    <string name="dataToImport">Select files to import</string>
    <string name="noDataToDownload">No XML files exist on the server. </string>
    <string name="noDataToImport">No XML files exist in the export folder. </string>
    <string name="dataToUplaodColumnHeaders">Upload   Overwrite </string>
    <string name="dataToDownlaodColumnHeaders">Download</string>
    <string name="dataToImportColumnHeaders">Import</string>
    
    <!-- others -->
    <string name="entityMarker">[]</string>
    
</resources>