<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    <item android:id="@+id/menu_save"
          android:title="@string/save" />
    
    <item android:id="@+id/menu_export"
          android:title="@string/export_to_xml" />
    
    <item android:id="@+id/menu_export_all"
          android:title="@string/export_all_to_zip" />
    
    <item android:id="@+id/menu_import_from_file"
    	  android:title="@string/import_from_xml_file" />   
    
    <item android:id="@+id/menu_download"
    	  android:title="@string/download_from_server" />       
    
    <item android:id="@+id/menu_upload"
      android:title="@string/upload_to_server" />
    
   	<!--<item android:id="@+id/menu_import_codelist_from_file"
  	  android:title="@string/import_codelist_from_csv_file" />-->
    	  
    <item android:id="@+id/menu_settings"
          android:title="@string/settings" />
    
    <item android:id="@+id/menu_about"
          android:title="@string/about" />
    
    <item android:id="@+id/menu_exit"
          android:title="@string/exit" />
    
</menu>