<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    
    <TextView 
   		android:id="@+id/lblTitle"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:text="@string/settingsScreenTitle"
   		 >
   	</TextView>
	<CheckBox
		android:id="@+id/chkSoftKeyboardOnText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/lblTitle"
		android:text="@string/showSoftKeyboardOnText" />
	 <CheckBox
		android:id="@+id/chkSoftKeyboardOnNumeric"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/chkSoftKeyboardOnText"
		android:text="@string/showSoftKeyboardOnNumeric" />
	 <CheckBox
		android:id="@+id/chckWhiteBackground"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/chkSoftKeyboardOnNumeric"
		android:text="@string/whiteBackground" />
	 	 
    <TextView 
   		android:id="@+id/lblGpsTimeout"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/chckWhiteBackground"
   		android:text="@string/lblGpsTimeout"
   		android:layout_alignBottom="@+id/txtGpsTimeout"
        android:layout_alignTop="@id/txtGpsTimeout"
        android:gravity="center_vertical" 
   		 >
   	</TextView>
   	
    <EditText 
   		android:id="@+id/txtGpsTimeout"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:inputType="number"
   		android:layout_toRightOf="@id/lblGpsTimeout"
   		android:layout_below="@id/chckWhiteBackground"
   		 >
   	</EditText>	
   	
    <TextView 
   		android:id="@+id/lblLanguage"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/txtGpsTimeout"
   		android:layout_toLeftOf="@id/txtGpsTimeout"
   		android:text="@string/lblLanguage"
   		android:layout_alignBottom="@+id/languageSpinner"
        android:layout_alignTop="@id/languageSpinner"
        android:gravity="center_vertical"   		
   		 >
   	</TextView>
   	
    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lblLanguage"
   		android:layout_below="@id/txtGpsTimeout" />
    
    <TextView
   		android:id="@+id/lblFormDefinitionFile"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/languageSpinner"
   		android:text="@string/lblFormDefinitionFile"
   		android:layout_alignBottom="@+id/txtFormDefinitionFile"
        android:layout_alignTop="@id/txtFormDefinitionFile"
        android:gravity="center_vertical"
   		 >
   	</TextView>
   	
    <EditText 
   		android:id="@+id/txtFormDefinitionFile"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_toRightOf="@id/lblGpsTimeout"
   		android:layout_below="@id/languageSpinner"
   		 >
   	</EditText>
   	
    <TextView 
   		android:id="@+id/lblUsername"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/txtFormDefinitionFile"
   		android:text="@string/lblUsername"
   		android:layout_alignBottom="@+id/txtUsername"
        android:layout_alignTop="@id/txtUsername"
        android:gravity="center_vertical"
   		 >
   	</TextView>
   	
    <EditText 
   		android:id="@+id/txtUsername"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_toRightOf="@id/lblUsername"
   		android:layout_below="@id/txtFormDefinitionFile"
   		 >
   	</EditText>	
   	
    <TextView 
   		android:id="@+id/lblSurveyId"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/txtUsername"
   		android:text="@string/lblSurveyId" 
   		android:layout_alignBottom="@+id/txtSurveyId"
        android:layout_alignTop="@id/txtSurveyId"
        android:gravity="center_vertical"
   		 >
   	</TextView>
   	
    <EditText 
   		android:id="@+id/txtSurveyId"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_toRightOf="@id/lblSurveyId"
   		android:layout_below="@id/txtUsername"
   		 >
   	</EditText>
   	
    <TextView 
   		android:id="@+id/lblRecordsDownloadPath"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/txtSurveyId"
   		android:text="@string/lblRecordDownloadPath" 
   		android:layout_alignBottom="@+id/txtRecordDownloadPath"
        android:layout_alignTop="@id/txtRecordDownloadPath"
        android:gravity="center_vertical"
   		 >
   	</TextView>
   	
    <!--<EditText 
   		android:id="@+id/txtRecordsDownloadPath"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_toRightOf="@id/lblRecordsDownloadPath"
   		android:layout_below="@id/txtSurveyId"
   		 >
   	</EditText>
   	
    <TextView 
   		android:id="@+id/lblRecordsUploadPath"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/txtRecordsDownloadPath"
   		android:text="@string/lblRecordUploadPath" 
   		android:layout_alignBottom="@+id/txtRecordDownloadPath"
        android:layout_alignTop="@id/txtRecordDownloadPath"
        android:gravity="center_vertical"
   		 >
   	</TextView>-->
   	
    <EditText 
   		android:id="@+id/txtRecordsDownloadPath"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_toRightOf="@id/lblRecordsDownloadPath"
   		android:layout_below="@id/txtSurveyId"
   		 >
   	</EditText>    
   	
</RelativeLayout>